RD Form and other minor re-organization

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fin2ools</title>
-    <meta name="description" content="A collection of financial analysis tools. That helps you track or evaluate your investments in a secure & easy manner." />
+    <meta name="description" content="A collection of financial tools. That helps you track or evaluate your investments in a offline, secure & easy manner." />
   </head>
   <body>
     <div id="root"></div>
