--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>fin2ools</title>
-    <meta name="description" content="A collection of financial tools. That helps you track or evaluate your investments in a offline, secure & easy manner." />
+    <meta
+      name="description"
+      content="A collection of financial tools. That helps you track or evaluate your investments in a offline, secure & easy manner."
+    />
   </head>
   <body>
     <div id="root"></div>
