--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon-180x180.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="theme_color"
+      content="#111827"
+      media="(prefers-color-theme: light)"
+    />
+    <meta
+      name="theme_color"
+      content="#F1F5F9"
+      media="(prefers-color-theme: dark)"
+    />
+
     <title>fin2ools</title>
     <meta
       name="description"
